# edu

./: README.md  requirements.txt
.github/workflows/: django.yml  run_tests.yml
BasePython/: requirements-django.txt  requirements.txt
BasePython/homework_01/: main.py
BasePython/homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
BasePython/homework_03/: Dockerfile  main.py  pyproject.toml
BasePython/homework_03/app/: app.py
BasePython/homework_04/: jsonplaceholder_requests.py  main.py  models.py
BasePython/homework_05/: app.py
BasePython/homework_05/templates/: base.html
BasePython/homework_06/: README.md  app.py  config.py  docker-compose.yml  main.py  prestart.sh
BasePython/homework_06/forms/: __init__.py  user.py
BasePython/homework_06/models/: __init__.py  user.py
BasePython/homework_06/templates/: base.html
BasePython/lessons/lesson-13-fastapi/: crud.py  dependencies.py
BasePython/lessons/lesson-14-docker-poetry/: main.py  pyproject.toml
BasePython/lessons/lesson-14-docker-poetry/lesson_14_docker_poetry/: app.py
BasePython/lessons/lesson-16-orm/: orm1_create_table.py  orm3_declarative_model.py  orm4_session_and_queries.py
BasePython/lessons/lesson-18-alembic/: main.py
BasePython/lessons/lesson-19-m2m/: main.py
BasePython/lessons/lesson-21-async-db/: main.py
BasePython/lessons/lesson-23-flask/: app.py
BasePython/lessons/lesson-26-flask-sqla/: app.py
BasePython/lessons/lesson-27-docker-compose/: app.py  config.py
BasePython/notes/lesson-14-docker-poetry/: Dockerfile
(+121 files in other folders)
