[tool.poetry]
name = "app"
version = "0.1.0"
description = "Homework-03"
authors = ["Igor Kuznetsov <igorkuznetsov14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
