[tool.poetry]
name = "lesson-14-docker-poetry"
version = "0.1.0"
description = ""
authors = ["Igor Kuznetsov <igorkuznetsov14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.17.5"
fastapi = "^0.74.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
